--- a/_sass/pygments/native.scss
+++ b/_sass/pygments/native.scss
@@ -2,13 +2,22 @@
     code, pre {
         background-color:#333;
         border: none;
+        margin-left: 0;
+        margin-right: 0;
+
     }
     code {
         overflow: auto;
     }
 }
 
+code {
+  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+}
+
+
 .highlight .hll { background-color: #404040 }
+.highlight  { background: #202020; color: #d0d0d0 }
 .highlight .c { color: #999999; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .g { color: #d0d0d0 } /* Generic */
