--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,3 +8,9 @@ ol, ul {
     list-style-position:outside;
     margin-left: 2.5rem;
 }
+h1, h2, h3, h4, h5, h6 {
+    color: $dark-grey;
+}
+p {
+    font-size: 1.75rem;
+}
