--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,9 +10,9 @@ $primary-color: #00A8C6;
 $secondary-color: #40C0CB;
 $border-color: #bbb;
 $link-color: #7BA4B1;
-$font-color: #222;
+$title-color: #FFF0CB;
 
-$font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $title-font-family: "Open Sans Condensed", "Arial Black", "Arial Bold", Gadget, sans-serif;
 
 $container-width: 720px !default;
