--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,55 +1,44 @@
-.posts {
-    margin: 8px 0 8px 0;
-}
-
-code {
-    //font-family:'Bitstream Vera Sans Mono','Courier', monospace;
-}
-
-.stamp {
-    position: relative;
-    margin: 1em auto;
-    padding: 1em 1em .25em 1em;
-    text-align: center;
-    text-transform: uppercase;
-    &:after {
-        position: absolute;
-        top: 100%;
-        left: 50%;
-        width: 240px;
-        height: 4px;
-        margin-left: -120px;
-        content: '';
-        background-color: $link-color;
-    }
+h2.stamp, h1.stamp {
     a {
         text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: $title-font-family;
-    color: $link-color;
+h2.stamp {
+    font-weight: 600;
+    font-size: 2em;
+    line-height: 1.3;
+    margin: 1rem 0;
+}
+
+h1.stamp {
+    text-align: center;
+    font-weight: 600;
 }
 
 .post{
+    padding: 3rem 0;
+    time {
+        color: $light-grey;
+    }
     h1 {
         margin: 0 auto;
     }
     .date {
         color: $light-grey;
         text-align: center;
-        margin: 1em auto 3em auto;
+        margin: 0.5em auto 3em auto;
     }
     img {
         max-width: 100%;
         margin: auto;
         display: block;
     }
-    p, .entry {
-        text-align: justify;
-    }
 }
+
 .comments {
     margin: 50px 0 30px 0;
 }
