--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
                         <a href="/">Blog</a>
                         <a href="/about">About</a>
                         <a href="/contact">Contact</a>
-                        <a href="/projects">Projects</a>
+                        <a href="https://github.com/diarmuidie">Projects</a>
                     </nav>
                 </div>
 
